--- a/fuel-price-tracker/src/main/resources/templates/index.html
+++ b/fuel-price-tracker/src/main/resources/templates/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fuel Price Tracker</title>
+    <title>Fuel price tracker</title>
     <!-- Include Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
-    <header>
-        <h1>Fuel Price Tracker</h1>
-        <!-- header content -->
-    </header>
-
     <main>
+        <header>
+            <h1 class="display-4 text-center">Daily fuel prices</h1>
+            <hr>
+        </header>
         <!-- Gasoline table -->
-        <table class="table table-sm table-bordered caption-top rounded-5">
-            <caption>Gasoline fuels</caption>
+        <h5 class="text-body-secondary">Gasoline fuels</h5>
+        <div class="input-group mb-3" style="max-width: 25%;">
+            <input type="text" id="gasoline-search" class="form-control" placeholder="Search gasoline fuels...">
+        </div>
+        <table id="gasoline-table" class="table table-sm">
             <thead>
             <tr>
                 <th style="width: 30%;">Fuel name</th>
@@ -30,7 +32,7 @@
             <tbody class="table-group-divider">
             <th:block th:each="station : ${gasStations}">
                 <th:block th:each="fuel : ${station.fuels}">
-                    <tr th:if="${fuel.type == fuelTypes.get(0)}">
+                    <tr th:if="${fuel.type == fuelTypes.get(0)}"> <!-- filter to only add gasoline fuels -->
                         <td th:text="${fuel.name}"></td>
                         <td th:text="${fuel.price}"></td>
                         <td th:text="${station.name}"></td>
@@ -42,8 +44,11 @@
         </table>
 
         <!-- Diesel table -->
-        <table class="table table-sm table-bordered caption-top">
-            <caption>Diesel fuels</caption>
+        <h5 class="text-body-secondary">Diesel fuels</h5>
+        <div class="input-group mb-3" style="max-width: 25%;">
+            <input type="text" id="diesel-search" class="form-control" placeholder="Search diesel fuels...">
+        </div>
+        <table id="diesel-table" class="table table-sm">
             <thead>
             <tr>
                 <th style="width: 30%;">Fuel name</th>
@@ -52,10 +57,10 @@
                 <th style="width: 20%;">Last updated</th>
             </tr>
             </thead>
-            <tbody>
+            <tbody class="table-group-divider">
             <th:block th:each="station : ${gasStations}">
                 <th:block th:each="fuel : ${station.fuels}">
-                    <tr th:if="${fuel.type == fuelTypes.get(1)}">
+                    <tr th:if="${fuel.type == fuelTypes.get(1)}"> <!-- filter to only add diesel fuels -->
                         <td th:text="${fuel.name}"></td>
                         <td th:text="${fuel.price}"></td>
                         <td th:text="${station.name}"></td>
@@ -67,15 +72,13 @@
         </table>
 
     </main>
-
-    <footer>
-        <a href="https://github.com/Juninger/FuelPriceTracker">GitHub</a>
-    </footer>
-
+    <!-- Include JavaScript -->
+    <script th:src="@{/js/scripts.js}"></script>
     <!-- Include Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous">
+    </script>
 </div>
 </body>
 </html>
