--- a/fuel-price-tracker/src/main/resources/templates/index.html
+++ b/fuel-price-tracker/src/main/resources/templates/index.html
@@ -16,71 +16,32 @@
                 <blockquote class="blockquote">
                     <h1 class="display-3 text-center">Daily fuel prices</h1>
                 </blockquote>
-                <figcaption class="blockquote-footer text-center">prices fetched:
+                <figcaption class="blockquote-footer text-center">prices updated:
                     <cite th:text="${dateTime}"></cite>
                 </figcaption>
             </figure>
             <hr>
         </header>
+
         <!-- Gasoline table -->
         <h5 class="text-body-secondary">Gasoline fuels</h5>
         <div class="input-group mb-3" style="max-width: 25%;">
             <input type="text" id="gasoline-search" class="form-control" placeholder="filter gasoline fuels...">
         </div>
-        <table id="gasoline-table" class="table table-sm">
-            <thead>
-            <tr>
-                <th style="width: 30%;">Fuel name</th>
-                <th style="width: 20%;">Price</th>
-                <th style="width: 30%;">Gas station</th>
-                <th style="width: 20%;">Last updated</th>
-            </tr>
-            </thead>
-            <tbody class="table-group-divider">
-            <th:block th:each="station : ${gasStations}">
-                <th:block th:each="fuel : ${station.fuels}">
-                    <!-- filter to only add gasoline fuels and check if the current one is the cheapest one available -->
-                    <tr th:if="${fuel.type == fuelTypes.get(0)}"
-                        th:class="${fuel.price == cheapestGasoline} ? 'table-success' : ''">
-                        <td th:text="${fuel.name}"></td>
-                        <td th:text="${fuel.price}"></td>
-                        <td th:text="${station.name}"></td>
-                        <td th:text="${fuel.lastUpdated}"></td>
-                    </tr>
-                </th:block>
-            </th:block>
-            </tbody>
-        </table>
+        <!-- Gasoline table fragment -->
+        <div th:replace="~{fragments/fuelTable ::
+            fuelTable(tableId=${'gasoline-table'}, gasStations=${gasStations}, fuelType=${fuelTypes[0]}, cheapestFuel=${cheapestGasoline})}">
+        </div>
 
         <!-- Diesel table -->
         <h5 class="text-body-secondary">Diesel fuels</h5>
         <div class="input-group mb-3" style="max-width: 25%;">
             <input type="text" id="diesel-search" class="form-control" placeholder="filter diesel fuels...">
         </div>
-        <table id="diesel-table" class="table table-sm">
-            <thead>
-            <tr>
-                <th style="width: 30%;">Fuel name</th>
-                <th style="width: 20%;">Price</th>
-                <th style="width: 30%;">Gas station</th>
-                <th style="width: 20%;">Last updated</th>
-            </tr>
-            </thead>
-            <tbody class="table-group-divider">
-            <th:block th:each="station : ${gasStations}">
-                <th:block th:each="fuel : ${station.fuels}">
-                    <!-- filter to only add diesel fuels and check if the current one is the cheapest one available -->
-                    <tr th:if="${fuel.type == fuelTypes.get(1)}"
-                        th:class="${fuel.price == cheapestDiesel} ? 'table-success' : ''">
-                        <td th:text="${fuel.name}"></td>
-                        <td th:text="${fuel.price}"></td>
-                        <td th:text="${station.name}"></td>
-                        <td th:text="${fuel.lastUpdated}"></td>
-                    </tr>
-                </th:block>
-            </th:block>
-            </tbody>
-        </table>
+        <!-- Diesel table fragment -->
+        <div th:replace="~{fragments/fuelTable ::
+            fuelTable(tableId=${'diesel-table'}, gasStations=${gasStations}, fuelType=${fuelTypes[1]}, cheapestFuel=${cheapestDiesel})}">
+        </div>
 
     </main>
     <!-- Include JavaScript -->
