--- a/fuel-price-tracker/src/main/resources/templates/fragments/fuelTable.html
+++ b/fuel-price-tracker/src/main/resources/templates/fragments/fuelTable.html
@@ -1,4 +1,4 @@
-<table th:fragment="fuelTable" th:id="${tableId}" class="table table-sm">
+<table th:fragment="fuelTable" th:id="${tableId}" class="table table-sm table-striped">
     <thead>
     <tr>
         <th style="width: 30%;">Fuel name</th>
@@ -7,12 +7,11 @@
         <th style="width: 20%;">Last updated</th>
     </tr>
     </thead>
-    <tbody class="table-group-divider">
+    <tbody class="table-group-divider text-success">
     <th:block th:each="station : ${gasStations}">
         <th:block th:each="fuel : ${station.fuels}">
-            <!-- filter to only add gasoline fuels and check if the current one is the cheapest one available -->
             <tr th:if="${fuel.type == fuelType}"
-                th:class="${fuel.price == cheapestFuel} ? 'table-success' : ''">
+                th:class="${fuel.price == cheapestFuel} ? 'cheapest-fuel' : ''">
                 <td th:text="${fuel.name}"></td>
                 <td th:text="${fuel.price}"></td>
                 <td th:text="${station.name}"></td>
