--- a/fuel-price-tracker/src/main/resources/templates/index.html
+++ b/fuel-price-tracker/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +7,12 @@
     <!-- Include Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- custom CSS -->
+    <style>
+        .cheapest-fuel td {
+            color: lightgreen;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -14,19 +20,19 @@
         <header>
             <figure>
                 <blockquote class="blockquote">
-                    <h1 class="display-3 text-center">Daily fuel prices</h1>
+                    <h1 class="display-3 text-center text-success-emphasis fw-bold">Daily fuel prices</h1>
                 </blockquote>
-                <figcaption class="blockquote-footer text-center">prices updated:
-                    <cite th:text="${dateTime}"></cite>
+                <figcaption class="blockquote-footer text-center text-light">prices fetched:
+                    <cite class="text-warning" th:text="${dateTime}"></cite>
                 </figcaption>
             </figure>
             <hr>
         </header>
 
         <!-- Gasoline table -->
-        <h5 class="text-body-secondary">Gasoline fuels</h5>
+        <h5 class="text-warning">Gasoline fuels</h5>
         <div class="input-group mb-3" style="max-width: 25%;">
-            <input type="text" id="gasoline-search" class="form-control" placeholder="filter gasoline fuels...">
+            <input type="text" id="gasoline-search" class="form-control border-warning-subtle" placeholder="filter gasoline fuels...">
         </div>
         <!-- Gasoline table fragment -->
         <div th:replace="~{fragments/fuelTable ::
@@ -34,9 +40,9 @@
         </div>
 
         <!-- Diesel table -->
-        <h5 class="text-body-secondary">Diesel fuels</h5>
+        <h5 class="text-warning">Diesel fuels</h5>
         <div class="input-group mb-3" style="max-width: 25%;">
-            <input type="text" id="diesel-search" class="form-control" placeholder="filter diesel fuels...">
+            <input type="text" id="diesel-search" class="form-control border-warning-subtle" placeholder="filter diesel fuels...">
         </div>
         <!-- Diesel table fragment -->
         <div th:replace="~{fragments/fuelTable ::
