--- a/fuel-price-tracker/src/main/resources/templates/fragments/fuelTable.html
+++ b/fuel-price-tracker/src/main/resources/templates/fragments/fuelTable.html
@@ -1,10 +1,10 @@
 <table th:fragment="fuelTable" th:id="${tableId}" class="table table-sm table-striped">
     <thead>
     <tr>
-        <th style="width: 30%;">Fuel name</th>
-        <th style="width: 20%;">Price</th>
-        <th style="width: 30%;">Gas station</th>
-        <th style="width: 20%;">Last updated</th>
+        <th style="width: 30%;">Drivmedel</th>
+        <th style="width: 20%;">Pris</th>
+        <th style="width: 30%;">Station</th>
+        <th style="width: 20%;">Senast uppdaterad</th>
     </tr>
     </thead>
     <tbody class="table-group-divider text-success">
