--- a/fuel-price-tracker/src/main/resources/templates/index.html
+++ b/fuel-price-tracker/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en" data-bs-theme="dark">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="sv" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fuel price tracker</title>
+    <title>Drivmedelpriser</title>
     <!-- Include Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,14 +15,14 @@
     </style>
 </head>
 <body>
-<div class="container">
+<div class="container" style="max-width: 60%;">
     <main>
         <header>
             <figure>
                 <blockquote class="blockquote">
-                    <h1 class="display-3 text-center text-success-emphasis fw-bold">Daily fuel prices</h1>
+                    <h1 class="display-3 text-center text-success-emphasis fw-bold">Dagens drivmedelspriser</h1>
                 </blockquote>
-                <figcaption class="blockquote-footer text-center text-light">prices fetched:
+                <figcaption class="blockquote-footer text-center text-light">priser hämtade:
                     <cite class="text-warning" th:text="${dateTime}"></cite>
                 </figcaption>
             </figure>
@@ -30,9 +30,9 @@
         </header>
 
         <!-- Gasoline table -->
-        <h5 class="text-warning">Gasoline fuels</h5>
+        <h5 class="text-warning">Bensin</h5>
         <div class="input-group mb-3" style="max-width: 25%;">
-            <input type="text" id="gasoline-search" class="form-control border-warning-subtle" placeholder="filter gasoline fuels...">
+            <input type="text" id="gasoline-search" class="form-control border-warning-subtle" placeholder="filtrera bensin...">
         </div>
         <!-- Gasoline table fragment -->
         <div th:replace="~{fragments/fuelTable ::
@@ -40,9 +40,9 @@
         </div>
 
         <!-- Diesel table -->
-        <h5 class="text-warning">Diesel fuels</h5>
+        <h5 class="text-warning">Diesel</h5>
         <div class="input-group mb-3" style="max-width: 25%;">
-            <input type="text" id="diesel-search" class="form-control border-warning-subtle" placeholder="filter diesel fuels...">
+            <input type="text" id="diesel-search" class="form-control border-warning-subtle" placeholder="filtrera diesel...">
         </div>
         <!-- Diesel table fragment -->
         <div th:replace="~{fragments/fuelTable ::
